corrected items alignment

--- a/css/style.css
+++ b/css/style.css
@@ -187,9 +187,7 @@ header .navbar .nav-item .nav-link {
   width: 100%;
   padding: 100px 0px;
 }
-.sub-section .sub-left img {
-  margin-top: 15px;
-}
+
 .sub-section .sub-right {
   margin-left: 135px;
 }
